--- a/index-style.css
+++ b/index-style.css
@@ -303,7 +303,7 @@ code:before {
 	border-radius: 0.3rem;
 
 	position: absolute;
-	z-index: 1;
+	z-index: 5;
 	
 	margin-left: 3rem;
 
